--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,17 @@
 @import "header.css";
+@import "footer.css";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+ul {
+    list-style: none;
 }
