--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import "header.css";
 @import "footer.css";
 @import "index.css";
+@import "productos.css";
 
 * {
     margin: 0;
@@ -48,7 +49,7 @@ ul {
 
 .tarjeta .valoracion .estrella {
     color: #088aa1;
-    font-size: 18px;
+    font-size: 12px;
 }
 
 .tarjeta .valoracion p {
@@ -83,4 +84,11 @@ ul {
     font-size: 16px;
     text-decoration: line-through;
     color: #888;
+}
+
+.tarjetas {
+    margin-inline: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
 }
