--- a/css/header.css
+++ b/css/header.css
@@ -70,22 +70,40 @@ header .der a:hover {
 }
 
 .search-container input {
-    padding: 5px 40px 5px 10px;
+    padding: 5px 40px 5px 10px; /* Agregamos espacio a la derecha para el botón */
     width: 100%;
     height: 40px;
     border-radius: 7px;
-    border: none;
+    border: 1px solid #ccc;
     background-color: #f5f5f5;
+    box-sizing: border-box; /* Para que el padding no afecte al tamaño total del input */
 }
 
-.search-icon {
+.search-container button {
     position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 40px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 7px 7px 0; /* Redondea las esquinas solo a la derecha */
+}
+
+.search-container button i {
     font-size: 18px;
     color: #aaa;
 }
+
+.search-container input:focus {
+    border-color: #999;
+    outline: none;
+}
+
 
 /* MENU DESPEGABLE CATEGORIAS */
 
