--- a/css/forms.css
+++ b/css/forms.css
@@ -61,6 +61,19 @@ input[id="descripcion"] {
   padding: 0px;
 }
 
+#comentario {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #cfd8e3;
+  border-radius: 4px;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  padding: 10px;
+  box-sizing: border-box;
+  resize: none;
+}
+
+
 input[type="submit"] {
   background-color: #2a4d69; 
   color: white;
@@ -78,3 +91,4 @@ input[type="submit"]:hover {
 input[type="submit"]:active {
   background-color: #1e3d59; 
 }
+
