--- a/assets/css/detalle_producto.css
+++ b/assets/css/detalle_producto.css
@@ -201,3 +201,16 @@
     margin: 5px;
     border-radius: 5px;
 }
+
+.pr-opiniones .pr-estrella {
+    color: #088aa1;
+    font-size: 12px;
+}
+
+.o-nombre {
+    margin-bottom: 5px;
+}
+
+.o-coment {
+    margin-left: 15px;
+}
