--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,12 @@ ul {
     margin-bottom: 15px;
 }
 
+.bienvenida h2{
+    font-size: 40px;;
+}
+
+
+
 
 /* Contenedor principal */
 .quienessomos-container {
