--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -25,6 +25,7 @@ header .btn_cat {
 
 header .btn_cat:hover {
     color: #4f5574;
+    
 }
 
 header .btn_cat i {
@@ -79,7 +80,7 @@ header .der a:hover {
     position: absolute;
     right: 0;
     top: 0;
-    height: 100%;
+    height: 40px;
     width: 40px;
     border: none;
     background-color: transparent;
@@ -199,4 +200,8 @@ header .der a:hover {
 .overlay.visible {
     opacity: 1;
     visibility: visible;
+}
+
+.nombre {
+    font-size: 18px;
 }
