--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,3 +409,39 @@ ul {
 .politica-cookies-container a:hover {
     text-decoration: underline;
 }
+
+.opinion {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.opinion h3 {
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.valoracion {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.valoracion .estrella {
+    color: #f39c12;
+    font-size: 1.2em;
+    margin-right: 5px;
+}
+
+.opinion p {
+    margin: 5px 0;
+    font-size: 1em;
+    color: #555;
+}
