--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,3 +450,25 @@ ul {
     text-align: center;
     margin-top: 50px;
 }
+
+
+.realizado h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.realizado p {
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+.realizado img {
+        display: block;
+        margin: 20px auto; /* Ajusta el margen según sea necesario */
+        max-width: 100%; /* Asegúrate de que la imagen no exceda el ancho del contenedor */
+        height: auto; /* Mantén la proporción de la imagen */
+        width: 600px;
+        margin-bottom: 300px;
+}
